tests/snapshots/table_occurrences/fmSyntaxColorizer/Color.Syntax - ID 1065134.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Related" height="12" id="1065134" name="Color.Syntax" type="Local">
	<UUID modifications="29" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">8717976F-51BF-401C-8696-A038B9D3BCD5</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="133" name="_Syntax"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="664" left="1412" bottom="712" right="1635"></CoordRect>
	<Color red="119" green="119" blue="119" alpha="1.00"></Color>
</TableOccurrence>
