tests/snapshots/table_occurrences/fmSyntaxColorizer/Color_Color_CountPalettes - ID 1065137.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Related" height="12" id="1065137" name="Color.Color_CountPalettes" type="Local">
	<UUID modifications="32" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">8638307D-80A5-4158-8C44-C80F03B66F4F</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="132" name="_Color"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="606" left="1412" bottom="654" right="1635"></CoordRect>
	<Color red="119" green="119" blue="119" alpha="1.00"></Color>
</TableOccurrence>
