tests/snapshots/table_occurrences/fmSyntaxColorizer/Color_Palette_all - ID 1065138.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Related" height="24" id="1065138" name="Color.Palette_all" type="Local">
	<UUID modifications="16" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">9EBFCBFC-2AD8-4D15-A6B7-4591473F8D10</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="135" name="_Palette"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="807" left="1412" bottom="843" right="1635"></CoordRect>
	<Color red="119" green="119" blue="119" alpha="1.00"></Color>
</TableOccurrence>
