tests/snapshots/table_occurrences/fmSyntaxColorizer/Color_Palette_byID - ID 1065128.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Related" height="24" id="1065128" name="Color.Palette_byID" type="Local">
	<UUID modifications="20" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">960C91FF-AEB4-41DF-93C6-2A67639FC520</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="135" name="_Palette"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="566" left="1412" bottom="602" right="1635"></CoordRect>
	<Color red="119" green="119" blue="119" alpha="1.00"></Color>
</TableOccurrence>
