tests/snapshots/table_occurrences/fmSyntaxColorizer/Color_Palette_byName - ID 1065130.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Related" height="24" id="1065130" name="Color.Palette_byName" type="Local">
	<UUID modifications="21" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">AFAB3B10-E04D-4F13-A069-F74D3CA92D39</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="135" name="_Palette"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="762" left="1412" bottom="798" right="1635"></CoordRect>
	<Color red="119" green="119" blue="119" alpha="1.00"></Color>
</TableOccurrence>
