tests/snapshots/table_occurrences/fmSyntaxColorizer/Color_Syntax_byCommand - ID 1065142.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Related" height="24" id="1065142" name="Color.Syntax_byCommand" type="Local">
	<UUID modifications="22" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">BE72C346-53E1-4564-A24D-28B26E65D521</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="133" name="_Syntax"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="716" left="1412" bottom="752" right="1635"></CoordRect>
	<Color red="119" green="119" blue="119" alpha="1.00"></Color>
</TableOccurrence>
