tests/snapshots/table_occurrences/fmSyntaxColorizer/GUISyntax_Self_EN - ID 1065163.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Related" height="38" id="1065163" name="GUISyntax.Self_EN" type="Local">
	<UUID modifications="14" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">3DA48668-818A-4182-AD43-0B4CFAAFB88A</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="134" name="_GUISyntax"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="512" left="1415" bottom="606" right="1638"></CoordRect>
	<Color red="119" green="119" blue="119" alpha="1.00"></Color>
</TableOccurrence>
