tests/snapshots/table_occurrences/fmSyntaxColorizer/GUISyntax_Syntax - ID 1065122.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Related" height="24" id="1065122" name="GUISyntax.Syntax" type="Local">
	<UUID modifications="30" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">089251D8-03E5-4D58-8027-134E08D1237C</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="133" name="_Syntax"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="465" left="1415" bottom="501" right="1638"></CoordRect>
	<Color red="119" green="119" blue="119" alpha="1.00"></Color>
</TableOccurrence>
