tests/snapshots/table_occurrences/fmSyntaxColorizer/Home.Syntax_ALL - ID 1065133.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Collapse" height="38" id="1065133" name="Home.Syntax_ALL" type="Local">
	<UUID modifications="34" userName="R.Watson" accountName="admin" timestamp="2021-09-24T09:30:36">FA0BC357-26F2-4130-9E11-4B121DFC70DB</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="133" name="_Syntax"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="20" left="389" bottom="138" right="631"></CoordRect>
	<Color red="119" green="119" blue="119" alpha="1.00"></Color>
</TableOccurrence>
