tests/snapshots/table_occurrences/fmSyntaxColorizer/Home.Syntax_ALL.GUISyntax - ID 1065147.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Related" height="84" id="1065147" name="Home.Syntax_ALL.GUISyntax" type="Local">
	<UUID modifications="9" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">E0D8C79D-E5F6-46F0-8465-E9A2CA6BD397</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="134" name="_GUISyntax"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="54" left="707" bottom="102" right="914"></CoordRect>
	<Color red="119" green="119" blue="119" alpha="1.00"></Color>
</TableOccurrence>
