tests/snapshots/table_occurrences/fmSyntaxColorizer/Home.Syntax_Dynamic1 - ID 1065155.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Collapse" height="38" id="1065155" name="Home.Syntax_Dynamic1" type="Local">
	<UUID modifications="26" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">FA9CE8C0-11D1-4024-9A54-9DC70A011BE0</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="133" name="_Syntax"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="117" left="387" bottom="223" right="629"></CoordRect>
	<Color red="119" green="119" blue="119" alpha="1.00"></Color>
</TableOccurrence>
