tests/snapshots/table_occurrences/fmSyntaxColorizer/Home.Syntax_Dynamic3.Palette.Color_VL - ID 1065161.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Collapse" height="38" id="1065161" name="Home.Syntax_Dynamic3.Palette.Color_VL" type="Local">
	<UUID modifications="12" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">6DC37F1B-1DE3-4705-B553-022DCEBA7A4E</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="132" name="_Color"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="199" left="711" bottom="293" right="953"></CoordRect>
	<Color red="119" green="119" blue="119" alpha="1.00"></Color>
</TableOccurrence>
